# todo-app

./: .env  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Makefile
backend/src/: main.rs
backend/src/controllers/: todo.rs
backend/src/middlewares/: cors.rs  mod.rs
backend/src/models/: todo.rs
backend/src/routes/: healthchecker.rs  mod.rs  router.rs
backend/src/utils/: consts.rs  mod.rs
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/Components/: CheckBox.tsx
frontend/app/: globals.css  page.tsx
migrations/: 20240804115601_init.down.sql  20240804115601_init.up.sql
